Fix swagger definitions
