# api/docs/swagger.yaml
@@ -1,3 +1,4 @@
+basePath: '{{.BasePath}}'
 definitions:
   controller.APIError:
     properties:
@@ -12,9 +13,13 @@ definitions:
   controller.fileBytes:
     items: {}
     type: array
+host: '{{.Host}}'
 info:
   contact: {}
+  description: '{{.Description}}'
   license: {}
+  title: '{{.Title}}'
+  version: '{{.Version}}'
 paths:
   /profile/{profile_id}:
     get:
@@ -36,11 +41,13 @@ paths:
           description: Profile not found
           schema:
             $ref: '#/definitions/controller.APIError'
+            type: object
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/controller.APIError'
-  /stitch/{maifest_id}:
+            type: object
+  /stitch/{manifest_id}:
     post:
       consumes:
       - application/octet-stream
@@ -58,15 +65,18 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/controller.fileBytes'
+            type: object
         "400":
           description: Manifest id not found
           schema:
             $ref: '#/definitions/controller.APIError'
+            type: object
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/controller.APIError'
-  /stitch/{maifest_id}/{surface_id}:
+            type: object
+  /stitch/{manifest_id}/{surface_id}:
     get:
       description: post surface query to stitch
       parameters:
@@ -82,14 +92,17 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/controller.fileBytes'
+            type: object
         "400":
           description: Surface id not found
           schema:
             $ref: '#/definitions/controller.APIError'
+            type: object
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/controller.APIError'
+            type: object
   /surface/:
     get:
       description: get list of available surfaces
@@ -100,11 +113,13 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/controller.fileBytes'
+            type: object
         "502":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/controller.APIError'
-  /surface/{surfaceID}:
+            type: object
+  /surface/{surface_id}:
     get:
       description: get surface file
       parameters:
@@ -120,10 +135,12 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/controller.fileBytes'
+            type: object
         "502":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/controller.APIError'
+            type: object
     post:
       consumes:
       - application/octet-stream
@@ -141,8 +158,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/controller.bloburl'
+            type: object
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/controller.APIError'
+            type: object
 swagger: "2.0"
